<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.pet.moneyconvertor.viewmodels.ConvertViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ConvertFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/contentStart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/contentEnd"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <Button
            android:id="@+id/buttonLeft"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonRight"
            app:layout_constraintStart_toEndOf="@id/contentStart"
            app:layout_constraintTop_toBottomOf="@+id/textViewResultConvert" />


        <Button
            android:id="@+id/buttonRight"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text"
            app:layout_constraintBottom_toBottomOf="@+id/buttonLeft"
            app:layout_constraintEnd_toStartOf="@id/contentEnd"
            app:layout_constraintStart_toEndOf="@+id/buttonLeft" />

        <EditText
            android:id="@+id/editTextValue"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:cursorVisible="@{viewModel.startInputValue}"
            android:focusableInTouchMode="@{viewModel.startInputValue}"
            android:gravity="center"
            android:hint="@string/input_number_hint"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@+id/textViewLeft"
            app:layout_constraintEnd_toStartOf="@id/contentEnd"
            app:layout_constraintStart_toEndOf="@id/contentStart"
            app:layout_constraintTop_toTopOf="parent"
            android:imeOptions="actionDone"
            tools:text="@string/default_value_edit_number" />

        <TextView
            android:id="@+id/textViewResultConvert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{String.valueOf(viewModel.convertResult)}"
            app:layout_constraintBottom_toTopOf="@+id/buttonLeft"
            app:layout_constraintEnd_toStartOf="@id/contentEnd"
            app:layout_constraintStart_toEndOf="@id/contentStart"
            app:layout_constraintTop_toBottomOf="@+id/convertButton"
            tools:text="@string/default_value_edit_number" />

        <TextView
            android:id="@+id/textViewLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{viewModel.leftCurrency.charCode??`Выберите валюту`}"
            app:layout_constraintBottom_toTopOf="@+id/convertButton"
            app:layout_constraintEnd_toStartOf="@+id/textViewRight"
            app:layout_constraintStart_toEndOf="@id/contentStart"
            app:layout_constraintTop_toBottomOf="@+id/editTextValue"
            tools:text="RUB" />

        <TextView
            android:id="@+id/textViewRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{viewModel.rightCurrency.charCode??`Выберите валюту`}"
            app:layout_constraintBottom_toBottomOf="@+id/textViewLeft"
            app:layout_constraintEnd_toStartOf="@id/contentEnd"
            app:layout_constraintStart_toEndOf="@+id/textViewLeft"
            tools:text="USD" />

        <ImageButton
            android:id="@+id/convertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/textViewResultConvert"
            app:layout_constraintEnd_toStartOf="@id/contentEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/contentStart"
            app:layout_constraintTop_toBottomOf="@+id/textViewLeft"
            app:layout_constraintVertical_bias="0.347"
            app:srcCompat="@drawable/ic_change_currency_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>